[package]
name = "eth_types"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]

std = ["ssz/std", "serde/std", "crypto/std", "serde_json/std", "hex/std"]
tstd = ["sgxlib/tstd", "ssz/tstd", "serde/tstd", "crypto/tstd", "serde_json/tstd", "hex/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }
hex = { git = "https://github.com/automata-network/hex-rs", default-features = false }

ssz = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }

primitive-types       = { version = "0.9.0", default-features = false, features = ["codec", "rlp", "scale-info"] }
ethereum-types        = { version = "0.11.0", default-features = false, features = ["rlp", "codec", "num-traits"] }
rlp                   = { version = "0.5", default-features = false }
rlp-derive            = { version = "0.1" }
triehash              = { version = "0.8", default-features = false }
tiny-keccak           = { version = "2.0", features = ["keccak"] }
hash-db               = { version = "0.15.2", default-features = false }
hash256-std-hasher    = { version = "0.15.2", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }


[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_backtrace_sys = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_build_helper = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_demangle = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_libc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_rand = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tcrypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_ucrypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tprotected_fs = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_trts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tstd = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_types = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_unwind = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_urts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
